libs/@local/hashql/ast/tests/ui/lowering/type-extractor/infer-with-arguments.jsonc
//@ run: fail
//@ description: Tests rejection of underscore with explicit type arguments
[
  "type",
  "InvalidInfer<T>",
  "_",
  //~^ ERROR Type arguments cannot be used with '_' placeholder
  "_"
]
